<resources>
    <string name="app_name">Octolearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Flashcards</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Statistics</string>
    <string name="transcription">Transcription</string>
    <string name="add">Add</string>
    <string name="sample">Sample</string>
    <string name="in_polish">In Polish</string>
    <string name="in_english">In English</string>

    <string-array name="foreign_words">
        <item>a dog</item>
        <item>a crocodile</item>
        <item>a parrot</item>
        <item>a cat</item>
        <item>a hippopotamus</item>
        <item>a sheep</item>
        <item>a rabbit</item>
    </string-array>

    <string-array name="native_words">
        <item>pies</item>
        <item>krokodyl</item>
        <item>papuga</item>
        <item>kot</item>
        <item>hipopotam</item>
        <item>owca</item>
        <item>krolik</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Option1_summary">Choose between themes for application</string>
    <string name="option1_title">Dark mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>