<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFlashcardActivity">


    <EditText
        android:id="@+id/foreignWordPlainText"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/in_english"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nativeWordPlainText"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/in_polish"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foreignWordPlainText" />

    <EditText
        android:id="@+id/samplePlainText"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/sample"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nativeWordPlainText" />

    <EditText
        android:id="@+id/transcriptionPlainText"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/transcription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/samplePlainText" />

    <Button
        android:id="@+id/add_flashcard"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />


</androidx.constraintlayout.widget.ConstraintLayout>